Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -280,42 +280,42 @@
                 <div class="gallery-overlay"><h3>15 Años</h3><p>Sesión de Exteriores</p></div>
             </div>
             <div class="gallery-item">
-                <img src="2.jepg" alt="Quinceañera Fiesta">
+                <img src="2.jpeg" alt="Quinceañera Fiesta">
                 <div class="gallery-overlay"><h3>15 Años</h3><p>Momentos en familia</p></div>
             </div>
             
             <div class="gallery-item">
-                <img src="3.jepg" alt="Boda Entrada">
+                <img src="3.jpeg" alt="Boda Entrada">
                 <div class="gallery-overlay"><h3>Bodas</h3><p>Entrada a la Iglesia</p></div>
             </div>
             <div class="gallery-item">
-                <img src="4.jepg" alt="Boda Ceremonia">
+                <img src="4.jpeg" alt="Boda Ceremonia">
                 <div class="gallery-overlay"><h3>Bodas</h3><p>Ceremonia Religiosa</p></div>
             </div>
 
             <div class="gallery-item">
-                <img src="5.jepg" alt="Retrato Bebé">
+                <img src="5.jpeg" alt="Retrato Bebé">
                 <div class="gallery-overlay"><h3>Infantil</h3><p>Retratos Espontáneos</p></div>
             </div>
             <div class="gallery-item">
-                <img src="6.jepg" alt="Cumpleaños Infantil">
+                <img src="6.jpeg" alt="Cumpleaños Infantil">
                 <div class="gallery-overlay"><h3>Cumpleaños</h3><p>Celebrando la vida</p></div>
             </div>
             <div class="gallery-item">
-                <img src="7.jepg" alt="Bautismo">
+                <img src="7.jpeg" alt="Bautismo">
                 <div class="gallery-overlay"><h3>Bautismos</h3><p>Ceremonias Familiares</p></div>
             </div>
 
             <div class="gallery-item">
-                <img src="8.jepg" alt="Abrazos Emotivos">
+                <img src="8.jpeg" alt="Abrazos Emotivos">
                 <div class="gallery-overlay"><h3>Emociones</h3><p>Vínculos reales</p></div>
             </div>
             <div class="gallery-item">
-                <img src="9.jepg" alt="Detalles Decoración">
+                <img src="9.jpeg" alt="Detalles Decoración">
                 <div class="gallery-overlay"><h3>Detalles</h3><p>La magia está en lo pequeño</p></div>
             </div>
              <div class="gallery-item">
-                <img src="10.jepg" alt="Eventos Divertidos">
+                <img src="10.jpeg" alt="Eventos Divertidos">
                 <div class="gallery-overlay"><h3>Eventos</h3><p>Diversión pura</p></div>
             </div>
         </div>
@@ -334,4 +334,5 @@
     </footer>
 
 </body>
+
 </html>
