Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -330,7 +330,9 @@
     </section>
 
     <footer>
-        <p>&copy; 2026 Mariana Mendoza Fotografía. Todos los derechos reservados.</p>
+        <p>&copy; 2026 Mariana Mendoza Fotografía. 
+Obera Misiones
+Todos los derechos reservados.</p>
     </footer>
 
 </body>
