--- a/index.html
+++ b/index.html
@@ -291,16 +291,16 @@
           
 
             <div class="gallery-item">
-                <img src="5.jpeg" alt="Retrato Bebé">
+                <img src="2.jpeg" alt="Retrato Bebé">
                 <div class="gallery-overlay"><h3>Infantil</h3><p>Retratos Espontáneos</p></div>
             </div>
             <div class="gallery-item">
-                <img src="2.jpeg" alt="Cumpleaños Infantil">
+                <img src="5.jpeg" alt="Cumpleaños Infantil">
                 <div class="gallery-overlay"><h3>Cumpleaños</h3><p>Celebrando la vida</p></div>
             </div>
             <div class="gallery-item">
                 <img src="7.jpeg" alt="Bautismo">
-                <div class="gallery-overlay"><h3>Bautismos</h3><p>Ceremonias Familiares</p></div>
+                <div class="gallery-overlay"><h3>Bautismos</h3><p>Recuerdos de toda la vida</p></div>
             </div>
 
             <div class="gallery-item">
@@ -309,7 +309,7 @@
             </div>
             <div class="gallery-item">
                 <img src="9.jpeg" alt="Detalles Decoración">
-                <div class="gallery-overlay"><h3>Detalles</h3><p>La magia está en lo pequeño</p></div>
+                <div class="gallery-overlay"><h3>Bautismo</h3><p>Tiempo en familia</p></div>
             </div>
              <div class="gallery-item">
                 <img src="10.jpeg" alt="Eventos Divertidos">
@@ -317,7 +317,7 @@
             </div>
              <div class="gallery-item">
                 <img src="4.jpeg" alt="Boda Ceremonia">
-                <div class="gallery-overlay"><h3>Bodas</h3><p>Ceremonia Religiosa</p></div>
+                <div class="gallery-overlay"><h3>decoracion xv</h3><p>Detalles</p></div>
             </div>
         </div>
          
@@ -340,6 +340,7 @@ Todos los derechos reservados.</p>
 </body>
 
 </html>
+
 
 
 
