Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -315,10 +315,7 @@
                 <img src="10.jpeg" alt="Eventos Divertidos">
                 <div class="gallery-overlay"><h3>Eventos</h3><p>Diversión pura</p></div>
             </div>
-             <div class="gallery-item">
-                <img src="4.jpeg" alt="Boda Ceremonia">
-                <div class="gallery-overlay"><h3>decoracion xv</h3><p>Detalles</p></div>
-            </div>
+            
         </div>
          
     </section>
@@ -326,7 +323,7 @@
     <section id="contacto" class="contact">
         <h2 class="section-title" style="color: white; border-color: white;">Hablemos</h2>
         <p>¿Tienes un evento especial en puerta? Me encantaría contar tu historia.</p>
-        <a href="https://www.instagram.com/marianaamendoza5?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" class="btn" style="background: white; color: var(--primary);">Enviar Email</a>
+        <a href="marianamendozaa3@gmail.com" class="btn" style="background: white; color: var(--primary);">Enviar Email</a>
         <br><br>
         <p><small>O escríbeme por WhatsApp al +543755237222</small></p>
     </section>
@@ -340,6 +337,7 @@ Todos los derechos reservados.</p>
 </body>
 
 </html>
+
 
 
 
