--- a/index.html
+++ b/index.html
@@ -323,9 +323,9 @@
     <section id="contacto" class="contact">
         <h2 class="section-title" style="color: white; border-color: white;">Hablemos</h2>
         <p>¿Tienes un evento especial en puerta? Me encantaría contar tu historia.</p>
-        <a href="marianamendozaa3@gmail.com" class="btn" style="background: white; color: var(--primary);">Enviar Email</a>
+        <a href="https://wa.me/qr/KTJGJ4LEHKVRN1" class="btn" style="background: white; color: var(--primary);">Enviar Wpp</a>
         <br><br>
-        <p><small>O escríbeme por WhatsApp al +543755237222</small></p>
+        <p><small> Escríbeme por WhatsApp al +543755237222 </small></p>
     </section>
 
     <footer>
@@ -337,6 +337,7 @@ Todos los derechos reservados.</p>
 </body>
 
 </html>
+
 
 
 
